[WIT-2565] Implement template policy for DLT workloads